# data_docs

./: Cargo.toml  README.md  stop_word_list.txt
i18n/en/: data_docs.ftl
i18n/fr/: data_docs.ftl
migrations/2022-02-10-201856_create_basic_tables/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  schema.rs
src/handlers/: api.rs  authentication_handlers.rs  base.rs  document.rs  document_core.rs  email.rs  forms.rs  metadata.rs  mod.rs  routes.rs  template.rs  template_core.rs  template_section.rs  text.rs  upload_files.rs  users.rs
src/models/: approvals.rs  authentication.rs  document.rs  metadata.rs  mod.rs  section.rs  span.rs  tag.rs  template.rs  template_section.rs  text.rs  user.rs
templates/: base.html  index.html
templates/document/: create_document_core.html  create_document_sections.html
templates/document_core/: create_document_core.html  document_core.html  edit_document_core_form.html
templates/documents/: create_document_core.html  create_document_sections.html  document.html  document_index.html  edit_document_core.html  edit_document_sections.html
templates/metadata/: metadata.html
templates/template_core/: create_template_core.html  edit_template_core.html  template_core.html
templates/template_sections/: add_template_section.html  create_document_sections.html  create_template_sections.html  edit_template_section.html  template_section.html
templates/templates/: create_template_core.html  edit_template.html  edit_template_core.html  edit_template_sections.html  template.html  template_core.html  template_index.html
templates/texts/: edit_text.html  text.html  text_edit.html
templates/users/: user_page.html
