[package]
name = "data_docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }

chrono = {version = "0.4.19", features = ["serde"] }
serde = "1.0.130"
serde_derive = "1.0"
derive_more = "0.99.5"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }