[package]
name = "data_docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
actix-web = "4.0.0-rc.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "2.4.0"
actix-multipart = "0.3.0"
actix-service = "2.0.1"
actix-identity = "0.3.1"
actix-session = "0.4.1"

# database and data
diesel = { version = "1.4.8", features = ["postgres", "extras", "uuid", "r2d2", "chrono", "uuidv07"]}
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
lazy_static = "1.4"

dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"] }
serde = "1.0.136"
serde_derive = "1.0.136"
derive_more = "0.99.2"
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

# templating
tera = "1.15.0"
tera-text-filters = "1.0"
Inflector = "0.11.4"

# localization
fluent-templates = { version = "*", features = ["tera"] }
deepl-api = { git = "https://github.com/ToferC/deepl-api-rs.git", branch="master" }